--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="data:," />
   </head>
   <body>
     <div id="particles"><div id="root"></div></div>
@@ -16,9 +17,7 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
-      particlesJS.load("particles", "config.json", function() {
-        console.log("loaded");
-      });
+      particlesJS.load("particles", "config.json");
     </script>
   </body>
 </html>
