--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="particles"><div id="root"></div></div>
