--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
+
   <body>
-    <div id="particles"><div id="root"></div></div>
+    <div id="particles">
+      <div id="root"></div>
+    </div>
 
     <script src="src/index.js"></script>
     <script
