--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>reCAPTCHA V3s</title>
@@ -12,15 +11,18 @@
       <div id="root"></div>
     </div>
 
-    <script src="src/index.js"></script>
-    <script
+    <script src="/src/index.js"></script>
+    <!-- <script>
+      new Worker("./MyWorker.js");
+    </script> -->
+    <!-- <script
       src="https://www.google.com/recaptcha/api.js?render=6Lfx9JoUAAAAAOHf0pQafcxL6BKl_Y1ixRpfrJ0G"
       async
       defer
     ></script>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> -->
+    <!-- <script>
       particlesJS.load("particles", "config.json");
-    </script>
+    </script> -->
   </body>
 </html>
