--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>reCAPTCHA V3s</title>
+    <title>reCAPTCHA V3</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
